--- a/metadata.yaml
+++ b/metadata.yaml
@@ -8,6 +8,9 @@ contributor:
     gutenberg_agent_id: '42797'
     url: http://www.gutenberg.org/2009/agents/42797
     wikipedia: https://fi.wikipedia.org/wiki/Eino_Palola
+covers:
+- cover_type: generated
+  image_path: cover.png
 creator:
   author:
     agent_name: Murger, Henri
@@ -18,6 +21,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/6197
     wikipedia: http://en.wikipedia.org/wiki/Henri_Murger
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/70694#Boheemielamaa
 gutenberg_issued: '2023-05-03'
 identifiers:
   gutenberg: '70694'
